navbar changed. dark mode fixed.

--- a/css/blog.css
+++ b/css/blog.css
@@ -25,11 +25,136 @@
     color: #fff;
   }
 
+  .anasayfaDonus:hover{
+    color: rgb(255, 0, 0);
+  }
+
+  .dark-mode #naviBar{
+    background-color: #333;
+    color: #fff;
+  }
+  
   .dark-mode .naviBar{
-    background-color: #15151a;
+    background-color: #333;
     color: #fff;
   }
 
-  .anasayfaDonus:hover{
-    color: rgb(255, 0, 0);
+  @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root{
+    --color-1 : #f9f9fb9a;
+    --text-color : #000000;
+    --accent-color : #0045a5;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    font-size: 20px;
+    font-family: Poppins, 'Segoe UI', Tahoma, sans-serif;
+}
+
+nav{
+    height: 60px;
+    background-color: var(--color-1);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.links-container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+nav a{
+    height: 100%;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+nav a:hover{
+    background-color: var(--accent-color);
+    color: #ffffff;
+}
+
+nav .home-link{
+    margin-right: auto;
+}
+
+nav svg{
+    fill: var(--text-color);
+}
+
+#sidebar-active{
+    display: none;
+}
+
+.open-sidebar-button, .close-sidebar-button{
+    display: none;
+}
+
+@media(max-width: 450px){
+    .links-container{
+        
+        flex-direction: column;
+        align-items: flex-start;
+
+        position: fixed;
+        top: 0;
+        right: -100%;
+        z-index: 10;
+        width: 300px;
+
+        background-color: var(--color-1);
+        box-shadow: -5px 0 5px rgba(0,0,0,0.25);
+        transition: 0.5s ease-out;
+    }
+    nav a{
+        box-sizing: border-box;
+        height: auto;
+        width: 100%;
+        padding: 20px 30px;
+        justify-content: flex-start;
+    }
+
+    .open-sidebar-button, .close-sidebar-button{
+        padding: 20px;
+        display: block;
+    }
+    #sidebar-active:checked ~ .links-container{
+        right: 0;
+    }
+    #sidebar-active:checked ~ #overlay{
+
+        height: 100%;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 9;
+    }
+}
+
+
+.dark-mode nav a, button{
+  background-color: #333;
+  color: #fff;
+}
+
+.dark-mode .footerIletisim{
+  background-color: #15151a;
+  color: #fff;
+}
+
+
+.dark-mode .btn{
+    color: white;
   }
